ingress/deployment-servicio-ingress.yml
# Archivo que contiene el deployment y el servicios
# todo en un mismo archivo.
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deployment-ingress-basico
  name: deployment-ingress-basico
spec:
  # Indica la cantidad de replicas que tendremos para el servicio.
  replicas: 4
  selector:
    matchLabels:
      # Selector para controlar los pods del deployments
      app: deployment-ingress-basico
  strategy: {}
  template: # La misma información de los Pods.
    metadata:
      creationTimestamp: null
      labels:
        # Selector para utilizarlo en los servicios.
        app: deployment-ingress-basico
    spec:
      containers:
      - image: vacax/javalin-hola-mundo
        name: javalin-hola-mundo-deployment-ingress
        ports:
        - containerPort: 7000
          name: puerto-javalin
        resources:
          limits:
            cpu: 50m
            memory: 256M
          requests:
            cpu: 50m        
            memory: 256M
        livenessProbe:
          httpGet:
            path: /health
            port: puerto-javalin
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deployment-ingress-basico
  name: servicio-deployment-ingress
spec:
  # Para nuestro case 
  type: ClusterIP
  ports:
  # Puerto que estamos exponiendo en el cluster
  - port: 7000
    protocol: TCP
    # Puerto que escucha nuestra aplicación en el contenedor.
    targetPort: 7000    
  selector:
    app: deployment-ingress-basico
  
status:
  loadBalancer: {}
